--- a/table.html
+++ b/table.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">s
-    <title>metamor</title>
-  
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-  
-</head>
-<body>
-    <form action="blog.html" >
-  <h1>
-      LOGIN
-  </h1>
- <label>usename</label>
- <input type="search">
- <label>password</label>
- <input type="password">
 
-<input type="submit"     id="button" placeholder="Login">
-  <a href="https://www.google.com">forget password</a>
-  </form> 
-  </body>
-  </html>
+<html lang="en" dir="ltr">
+
+<head>
+  <meta charset="utf-8">
+  <title>S ⭕ ®️ ®️ Y</title>
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,200;1,100&display=swap');
+  </style>
+</head>
+
+<body>
+  <h1 class="header">I'M SORRY</h1>
+  <p class="para">i am very sorry😥
+    sathish
+  </p>
+</body>
+
+</html>
